# polars-regressions

./: .gitignore  README.md  barra_frets.ipynb  barra_frets.py  benchmark_memory.py  benchmark_output.txt  benchmark_sklearn.py  fexp_panel2_parquet.ipynb  main.py  plan.md  plfrets.ipynb  plfrets.py  pyproject.toml
