[project]
name = "plfrets"
version = "0.1.0"
description = "fast wls with polars example"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "parquet>=1.3.1",
    "polars>=1.42.0",
    "polars-ols>=0.3.5",
    "pyreadstat>=1.3.5",
]


[tool.uv]
exclude-newer = "5 days"
prerelease = "disallow"
