[project]
name = "plfrets"
version = "0.1.0"
description = "fast wls with polars example"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "parquet>=1.3.1",
    "polars>=1.42.0",
    "polars-ols>=0.3.5",
    "pyarrow>=24.0.0",
    "pyreadstat>=1.3.5",
    "scikit-learn>=1.9.0",
]


[tool.uv]
exclude-newer = "5 days"
prerelease = "disallow"
